--- a/1st_page.html
+++ b/1st_page.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" lang="en">
         <link rel="stylesheet" href="style.css">
-        <script src="1st_page_scripts.js"></script>
+        <script src="scripts.js"></script>
 
     </head>
     <body>
